syntax = "proto3";

package proto;

option go_package = "sync";
option (gogoproto.stable_marshaler_all) = true;

import "gogo.proto";
import "chain/types/proto/block.proto";

//protoc --proto_path=$GOPATH/pkg/mod/github.com/gogo/protobuf@v1.3.2/gogoproto --proto_path=.. --proto_path=./  --gofast_out=. ./proto/message_sync.proto

message SyncMessage {
  enum SyncMessageType {
    Unknown = 0;
    HeartBeatRequest = 1;
    BlockRequest = 2;
    BlockResponse = 3;
    StateRequest = 4;
    StateResponse = 5;
    EpochRequest = 6;
    EpochResponse = 7;
    NodeStateRequest = 8;
    NodeStateResponse = 9;
    AccountStateRequest = 10;
    AccountStateResponse = 11;
    ChainStateRequest = 12;
    ChainStateResponse = 13;

  };

  SyncMessageType MsgType  = 1  [(gogoproto.jsontag) = "msgType"];
  bytes Data = 2  [(gogoproto.jsontag) = "data"];
}

message HeartBeatRequest {
  uint64 BlockHeight = 1 [(gogoproto.jsontag)  = "blockHeight"];
  bytes StateRoot = 2 [(gogoproto.jsontag)  = "stateRoot"];
  uint64 SateVersion = 3 [(gogoproto.jsontag)  = "stateRoot"];
  bytes EpochRoot = 4 [(gogoproto.jsontag)  = "epochRoot"];
  bytes NodeRoot = 5 [(gogoproto.jsontag)  = "nodeRoot"];
  bytes ChainRoot = 6 [(gogoproto.jsontag)  = "chainRoot"];
  bytes AccountRoot = 7 [(gogoproto.jsontag)  = "accountRoot"];

}

message BlockRequest {
  uint64 Height = 1  [(gogoproto.jsontag) = "height"];
}

message BlockResponse {
  uint64 Height = 1  [(gogoproto.jsontag) = "height"];
  enum RespCode {
    OK     = 0;
    NOBLOCK = 1;
  }
  RespCode Code = 2  [(gogoproto.jsontag) = "code"];
  Block block = 3  [(gogoproto.jsontag) = "block"];
}

message StateRequest {
  uint64 StateVersion = 1  [(gogoproto.jsontag) = "stateVersion"];
  bytes EpochRoot = 2 [(gogoproto.jsontag) = "epochRoot"];
  bytes NodeRoot = 3 [(gogoproto.jsontag) = "nodeRoot"];
  bytes ChainRoot = 4 [(gogoproto.jsontag) = "chainRoot"];
  bytes AccountRoot = 5 [(gogoproto.jsontag) = "accountRoot"];


}

message StateResponse {
  bytes StateRoot = 1 [(gogoproto.jsontag) = "stateRoot"];
  uint64 StateVersion = 2 [(gogoproto.jsontag) = "stateVersion"];
  bytes StateByVersion = 3 [(gogoproto.jsontag) = "StateByVersion"];
  bytes EpochInfo = 4 [(gogoproto.jsontag) = "EpochInfo"];
}


message EpochResponse {
  uint64 Epoch = 1 [(gogoproto.jsontag) = "epoch"];
  uint64 StartTimeStamp = 2 [(gogoproto.jsontag) = "startTimeStamp"];
  uint64 StartHeight = 3 [(gogoproto.jsontag) = "startHeight"];
}

message NodeResponse{
  uint64 StateVersion = 1 [(gogoproto.jsontag)  = "stateVersion"];
  bytes NodeRoot = 2 [(gogoproto.jsontag)  = "nodeRoot"];
  bytes StateData = 3 [(gogoproto.jsontag)  = "stateData"];
}
